--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRIM PLUS</title>
+    <title>CrimPLUS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Sancreek&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>CRIMPLUS</h1>   
+        <h1>CrimPLUS</h1>   
             <button id="toggle">&#9776</button>   
         <nav id="menu">
             <ul>
