--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <footer id="contact" class="footer">
-        <p>&copy; 2025 CrimPLUS. All rights reserved.</p>
+        <p>&copy; Alicia J Lin - 000911420. 2025 CrimPLUS. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
